Increased font sizes, fixed spacing, fixed generate button.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,10 +7,12 @@ body {
   background-color: #800909;
   color: white; }
   body button {
+    color: white;
     background-color: #1a2b2b;
     border: none;
     border-radius: 8px;
-    padding: 15px 32px; }
+    font-size: 2em;
+    padding: 15px; }
 
 #header {
   background-color: #661111;
@@ -20,11 +22,11 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 75px; }
+  height: 150px; }
   #header h1 {
     width: 90%;
     text-align: center;
-    font-size: 3em;
+    font-size: 5em;
     font-family: 'Oswald', sans-serif; }
 
 #left {
@@ -38,25 +40,24 @@ body {
     order: 1;
     align-self: center;
     width: 90%;
-    height: 25px;
-    margin-top: 5px; }
+    height: 50px;
+    margin-top: 25px;
+    font-size: 2em; }
   #left #postContent {
     justify-content: center;
     flex: 0 0 auto;
     order: 2;
     align-self: center;
     width: 90%;
-    height: 25px;
-    margin-top: 5px; }
+    height: 50px;
+    margin-top: 10px;
+    font-size: 2em; }
   #left #generate {
     flex: 0 0 auto;
     order: 3;
     align-self: center;
     width: 25%;
-    height: 25px;
-    margin: 5px 0;
-    padding-bottom: 30px;
-    font-size: 1em; }
+    margin: 10px 0; }
 
 #content {
   flex: 0 0 auto;
@@ -65,17 +66,18 @@ body {
   flex-flow: row wrap;
   justify-content: space-around;
   width: 90%;
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Lato', sans-serif;
+  font-size: 2em; }
   #content #title {
     flex: 0 0 90%;
-    order: 1;
+    order: 2;
     text-align: center;
     font-family: 'Oswald', sans-serif;
-    font-size: 2em;
-    margin: 15px 0 5px 0; }
+    font-size: 3em;
+    margin: 15px 0; }
   #content #img {
     flex: 0 0 auto;
-    order: 2;
+    order: 1;
     align-self: center;
     width: 90%;
     height: auto; }
@@ -88,6 +90,14 @@ body {
     order: 4;
     line-height: 1.5em;
     margin-bottom: 25px; }
+
+#four-oh-four {
+  font-family: 'Oswald', sans-serif;
+  font-size: 3em; }
+
+h2 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 2em; }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
