--- a/scss/partials/layout.scss
+++ b/scss/partials/layout.scss
@@ -7,15 +7,13 @@ body{
 	background-color: rgb(128, 9, 9);
 	color: rgb(255,255,255);
 
-	// h2{
-	// 	font-family: 'Oswald', sans-serif;
-	// }
-
 	button{
+		color: rgb(255, 255, 255);
 		background-color: rgb(26, 43, 43);
 		border: none;
 		border-radius: 8px;
-		padding: 15px 32px;
+		font-size: 2em;
+		padding: 15px;
 	}
 }
 
@@ -27,12 +25,12 @@ body{
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 75px;
+	height: 150px;
 
 	h1{
 		width: 90%;
 		text-align: center;
-		font-size: 3em;
+		font-size: 5em;
 		font-family: 'Oswald', sans-serif;
 	}
 }
@@ -53,8 +51,10 @@ body{
 
 		align-self: center;
 		width: 90%;
-		height: 25px;
-		margin-top: 5px;
+		height: 50px;
+		margin-top: 25px;
+
+		font-size: 2em;
 	}
 
 	//dropdown for content selection
@@ -66,9 +66,10 @@ body{
 
 		align-self: center;
 		width: 90%;
-		height: 25px;
-		margin-top: 5px;
+		height: 50px;
+		margin-top: 10px;
 		
+		font-size: 2em;
 	}
 
 	#generate{
@@ -79,10 +80,7 @@ body{
 
 		//placement
 		width: 25%;
-		height: 25px;
-		margin: 5px 0;
-		padding-bottom: 30px;
-		font-size: 1em;
+		margin: 10px 0;
 	}
 }
 
@@ -95,21 +93,22 @@ body{
 	justify-content: space-around;
 	width: 90%;
 	font-family: 'Lato', sans-serif;
+	font-size: 2em;
 
 	#title{
 		//flex for child of #content
 		flex: 0 0 90%;
-		order: 1;
+		order: 2;
 
 		text-align: center;
 		font-family: 'Oswald', sans-serif;
-		font-size: 2em;
-		margin: 15px 0 5px 0;
+		font-size: 3em;
+		margin: 15px 0;
 	}
 
 	#img{
 		flex: 0 0 auto;
-		order: 2;
+		order: 1;
 		align-self: center;
 
 		width: 90%;
@@ -130,4 +129,15 @@ body{
 		line-height: 1.5em;
 		margin-bottom: 25px;
 	}
+}
+
+//404.html styling
+#four-oh-four{
+	font-family: 'Oswald', sans-serif;
+	font-size: 3em;
+}
+
+h2{
+	font-family: 'Oswald', sans-serif;
+	font-size: 2em;
 }
